# ReqCheck

./:  .env.prod  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
frontend/: Dockerfile  requirements.txt
frontend/app/: artifacts.py  business_visions.py  config.py  constants.py  handlers.py  projects.py  questions.py  requirements.py  ui.py
frontend/static/: custom.css
rag_engine/: manage.py
rag_engine/api_service/: asgi.py  embedding.py  settings.py  urls.py  validate_requirements.py  wsgi.py
rag_engine/business_visions/: admin.py  apps.py  models.py  process_pdf.py  serializers.py  urls.py  views.py
rag_engine/business_visions/migrations/: 0001_enable_pgvector.py  0001_initial.py  0002_initial.py  0002_pdfchunk.py  0003_pdfchunk_business_vision_alter_pdfchunk_embedding.py
rag_engine/projects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
rag_engine/projects/migrations/: 0001_initial.py
rag_engine/requirements/: admin.py  apps.py  convert_requirement.py  models.py  serializers.py  urls.py  views.py
rag_engine/requirements/migrations/: 0001_enable_pgvector.py  0001_initial.py  0002_initial.py  0002_requirement_embedding.py
