[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReqCheck"
version = "0.1.0"
description = "ReqCheck - Software Requirements Checking"
authors = [
  {name = "Glaucia Schnoeller"},
]
requires-python = ">=3.8"

dependencies = [
  "Django>=4.2",
  "gunicorn",
  "psycopg[binary]",
  "pgvector",
  "djangorestframework",
  "python-decouple",
  "langchain",  # stable version
  "langchain-community",
  "langchain-huggingface",
  "sentence-transformers",
  "unstructured[all-docs]",  # version tested with LangChain
  "PyPDF2",
  "tqdm",
  "requests",
  "pydantic"  # to ensure compatibility with LangChain
]

[tool.setuptools]
package-dir = {"" = "rag_engine"}

[tool.setuptools.packages.find]
where = ["rag_engine"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
